# rustllama

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HF_DOWNLOAD_EXAMPLES.md  LICENSE  README.md  ROADMAP.md  advanced-workflow.yml  code_generation.txt  creative_story.txt  dataset-example.yml  research_summary.txt  sample.yml  simple-dataset.yml  test-config.yml  test_dataset.jsonl  test_qa_dataset.jsonl
.github/workflows/: ci.yml  release.yml
src/: config.rs  downloader.rs  main.rs  tests.rs  tests_new.rs
